fixed start sizing on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,3 +135,13 @@ h1 {
 .similarArtist:hover {
     text-decoration: underline;
 }
+
+@media only screen and (max-width: 350px){
+
+    .rating-stars ul>li.star {
+    
+    font-size: 2em;
+    
+    }
+
+}
